--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 wgpu = "0.15.0"
-winit = "0.27.0"
+winit = "0.28.1"
+image = "0.24.5"
 env_logger = "0.10.0"
 pollster = "0.2.5"
 bytemuck = "1.12.0"
