--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ pollster = "0.2.5"
 bytemuck = "1.12.0"
 log = "0.4.17"
 structopt = "0.3.26"
-cgmath = "0.18.0"
+#cgmath = "0.18.0"
+nalgebra-glm = "0.18.0"
