--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ wgpu = "0.15.0"
 winit = "0.28.1"
 image = "0.24.5"
 env_logger = "0.10.0"
-pollster = "0.2.5"
+pollster = "0.3.0"
 bytemuck = "1.12.0"
 log = "0.4.17"
 structopt = "0.3.26"
 #cgmath = "0.18.0"
 nalgebra-glm = "0.18.0"
+rand = "0.8.5"
