--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ winit = "0.28.1"
 image = "0.24.5"
 env_logger = "0.10.0"
 pollster = "0.3.0"
-bytemuck = "1.12.0"
+bytemuck = { version = "1.12", features = [ "derive" ] }
 log = "0.4.17"
 structopt = "0.3.26"
 #cgmath = "0.18.0"
@@ -21,3 +21,4 @@ rand = "0.8.5"
 tobj = { version = "3.2.1", features = [
     "async",
 ]}
+anyhow = "1.0.69"
