--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,25 +3,34 @@ name = "wgpu_template_app"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 wgpu = "0.15.0"
-winit = "0.28.1"
 env_logger = "0.10.0"
 pollster = "0.3.0"
 bytemuck = { version = "1.12", features = [ "derive" ] }
 log = "0.4.17"
 structopt = "0.3.26"
-#cgmath = "0.18.0"
 nalgebra-glm = "0.18.0"
 rand = "0.8.5"
 #renderdoc = "0.11.0"
 tobj = { version = "3.2.1", features = [
-    "async",
+   "async",
 ]}
 gltf = "1.0.0"
 anyhow = "1.0.69"
 image = { version = "0.24.5", features = ["png"] }
 ncollide2d = "0.33.0"
 base64 = "0.21.0"
+
+[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
+winit = "0.28.3"
+
+[target.'cfg(target_os = "android")'.dependencies]
+ndk-sys = "*"
+#android_logger = "0.13.1"
+jni = "0.21.0"
+jni_fn = "0.1"
+raw-window-handle = "0.5"
