--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ log = "0.4.17"
 structopt = "0.3.26"
 nalgebra-glm = "0.18.0"
 rand = "0.8.5"
-renderdoc = "0.11.0"
 tobj = { version = "3.2.1", features = [
    "async",
 ]}
@@ -26,6 +25,7 @@ ncollide2d = "0.33.0"
 base64 = "0.21.0"
 imgui = "0.10.0"
 imgui-wgpu = "0.22.0"
+ktx = "0.3.2"
 
 [target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
 winit = "0.28.3"
